# jvm

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .tokeignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rust-toolchain.toml
.cargo/: config  config.toml
classfile/fuzz/: Cargo.toml
classfile/fuzz/fuzz_targets/: classfile.rs
generators/vm_symbols/: Cargo.toml
generators/vm_symbols/src/: lib.rs
jni/: Cargo.toml  README.md
jni/src/: env.rs  error.rs  java_vm.rs  lib.rs  method.rs  objects.rs  string.rs  version.rs
jni/src/env/: array.rs  class.rs  exceptions.rs  field.rs  method.rs  mod.rs  monitor.rs  nio.rs  object.rs  references.rs  reflection.rs  register.rs  string.rs  version.rs  vm.rs  weak.rs
jni/src/java_vm/: attach_args.rs  error.rs  init_args.rs
jni/sys/: Cargo.toml  README.md
jni/sys/src/: lib.rs
native/java/: Cargo.toml
native/macros/: Cargo.toml
native/macros/src/: call.rs  lib.rs
native/macros/src/calls/: jni.rs  jvmti.rs  mod.rs
native/nio/: Cargo.toml
native/nio/src/: lib.rs
native/nio/src/channel/: mod.rs
native/nio/src/channel/unix/: mod.rs
native/nio/src/channel/windows/: mod.rs
native/nio/src/fs/: mod.rs
native/nio/src/fs/unix/: UnixFileSystem.rs  UnixNativeDispatcher.rs  mod.rs
native/nio/src/fs/windows/: RegistryFileTypeDetector.rs  WindowsNativeDispatcher.rs  mod.rs
native/nio/src/unix/: mod.rs
native/nio/src/unix/fs/: UnixNativeDispatcher.rs  mod.rs
runtime/: Cargo.toml  README.md  build.rs  vm_functions.txt
runtime/src/: classpath.rs  error.rs  frame.rs  globals.rs  initialization.rs  interpreter.rs  lib.rs  method_invoker.rs  string_interner.rs  symbols.rs  thread.rs
runtime/src/calls/: jcall.rs  mod.rs  stubs.rs
runtime/src/classes/: boxes.rs  java_io_File.rs  java_io_FileDescriptor.rs  java_io_FileInputStream.rs  java_io_FileOutputStream.rs  java_lang_Class.rs  java_lang_ClassLoader.rs  java_lang_Module.rs  java_lang_StackTraceElement.rs  java_lang_String.rs  java_lang_Thread.rs  java_lang_Throwable.rs  java_lang_invoke_LambdaForm.rs  java_lang_invoke_MemberName.rs  java_lang_invoke_MethodHandle.rs  java_lang_invoke_MethodType.rs  java_lang_invoke_ResolvedMethodName.rs  java_lang_ref_Reference.rs  java_lang_reflect_Constructor.rs  java_lang_reflect_Field.rs  java_lang_reflect_Method.rs  jdk_internal_misc_UnsafeConstants.rs  jdk_internal_reflect_ConstantPool.rs  mod.rs
runtime/src/classes/java/io/: File.rs  FileDescriptor.rs  FileInputStream.rs  FileOutputStream.rs  mod.rs
runtime/src/classes/java/lang/: Class.rs  ClassLoader.rs  Module.rs  Object.rs  StackTraceElement.rs  String.rs  Thread.rs  Throwable.rs  boxes.rs  mod.rs
runtime/src/classes/jdk/internal/: mod.rs
runtime/src/classpath/: classloader.rs  jar.rs  jimage.rs  mod.rs
runtime/src/classpath/loader/: mod.rs  set.rs
runtime/src/dynamic/: mod.rs  var_handle.rs
runtime/src/globals/: classes.rs  field_offsets.rs  fields.rs  mirrors.rs  mod.rs  modules.rs  threads.rs
runtime/src/heap/: class.rs  class_instance.rs  field.rs  method.rs  mirror.rs  mod.rs  reference.rs
runtime/src/heap/spec/: class.rs  method.rs  mod.rs
runtime/src/modules/: entry.rs  mod.rs  package.rs  set.rs
runtime/src/native/: class.rs  intrinsics.rs  jni.rs  lookup.rs  method.rs  mod.rs
runtime/src/native/java/: mod.rs
runtime/src/native/java/io/: FileDescriptor.rs  FileInputStream.rs  FileOutputStream.rs  FileSystem.rs  UnixFileSystem.rs
runtime/src/native/java/lang/: Class.rs  ClassLoader.rs  Double.rs  Float.rs  Module.rs  NullPointerException.rs  Object.rs  Runtime.rs  StackTraceElement.rs  String.rs  StringBuilder.rs  StringUTF16.rs  System.rs  Thread.rs  Throwable.rs  mod.rs
runtime/src/native/java/security/: AccessController.rs
runtime/src/native/jdk/internal/: mod.rs
runtime/src/native/jni/: README.md  array.rs  class.rs  exceptions.rs  field.rs  method.rs  mod.rs  monitor.rs  nio.rs  object.rs  references.rs  reflection.rs  register.rs  string.rs  version.rs  vm.rs  weak.rs
runtime/src/native/jni/invocation_api/: README.md  library.rs  mod.rs
runtime/src/native/jvm/: agents.rs  arrays.rs  assertions.rs  cds.rs  constant_pool.rs  exceptions.rs  fields.rs  finalization.rs  libraries.rs  management.rs  methods.rs  mod.rs  modules.rs  monitors.rs  object.rs  os.rs  printing.rs  references.rs  reflection.rs  stackwalker.rs  strings.rs  system.rs  threads.rs  vm.rs
runtime/src/native/jvmti/: memory_management.rs  mod.rs  thread.rs  thread_group.rs
runtime/src/native/lib/: mod.rs  shared.rs
runtime/src/native/lib/arch/: mod.rs
runtime/src/native/lib/unix/: mod.rs  properties.rs  shared.rs
runtime/src/native/method-gen/: Cargo.toml
runtime/src/objects/: README.md  array.rs  boxing.rs  class.rs  class_instance.rs  field.rs  instance.rs  method.rs  mirror.rs  mod.rs  module.rs  monitor.rs  reference.rs  vtable.rs
runtime/src/objects/array/: mod.rs  object.rs  primitive.rs
runtime/src/objects/class/: mod.rs  ptr.rs  spec.rs  vtable.rs
runtime/src/objects/constant_pool/: cp_types.rs  entry.rs  mod.rs  raw_ext.rs
runtime/src/objects/instance/: array.rs  class.rs  mirror.rs  object.rs
runtime/src/objects/method/: mod.rs  spec.rs
runtime/src/objects/spec/: README.md  class.rs  method.rs
runtime/src/options/: error.rs  mod.rs
runtime/src/stack/: local_stack.rs  mod.rs  operand_stack.rs
runtime/src/symbols/: README.md  mod.rs
runtime/src/test_utils/: loader.rs  mod.rs  thread.rs
runtime/src/thread/: builder.rs  exceptions.rs  hash.rs  java_lang_Thread.rs  mod.rs  pool.rs  stack.rs
runtime/src/thread/frame/: mod.rs  native.rs  stack.rs
runtime/src/verifier/: accessors.rs  error.rs  frame.rs  method.rs  mod.rs  type_system.rs
tools/jimage/: Cargo.toml  README.md
tools/jimage/src/: main.rs
tools/jmod/: Cargo.toml  README.md
tools/jmod/src/: error.rs  main.rs
tools/sj/: Cargo.toml  README.md
tools/sj/src/: cli.rs  error.rs  lib.rs  main.rs  native.rs
tools/sj/src/cli/: clap.rs  mod.rs  options.rs
versioning/: Cargo.toml
versioning/src/: error.rs  lib.rs
(+340 files in other folders)
