[workspace]
resolver = "2"
members = [
    "generators/*",
    "tools/*",
    "classfile",
    "instructions",
    "runtime",
    "common",
    "jimage",
    "jmod",
    "versioning",
    "platform",
    "jni",
    "jni/sys",
]

[workspace.dependencies]
runtime = { path = "runtime" }
classfile = { path = "classfile" }
common = { path = "common" }
instructions = { path = "instructions" }
jimage = { path = "jimage" }
jni = { path = "jni" }
jni_sys = { path = "jni/sys" }
platform = { path = "platform" }
vm_symbols = { path = "generators/vm_symbols" }

byteorder = "1.5.0"
byte-slice-cast = "1.2.2"
cfg-if = "1.0.0"
const_format = "0.2.33"
fxhash = "0.2.1"
libc = "0.2"
libloading = "0.8.5"
tracing = "0.1.41"
paste = "1.0.15"
zip = { version = "2.2.1", default-features = false }

# Generators
combine = "4.6.7"
bitflags = "2.6.0"
indexmap = "2.7.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false }
walkdir = "2.5.0"

# Tools
clap = "4.0.29"
tracing-subscriber = "0.3.18"
