[workspace]
resolver = "2"
members = [
    "generators/*",
    "tools/*",
    "classfile",
    "instructions",
    "runtime",
    "common",
    "jimage",
    "jmod",
    "versioning",
    "platform",
    "jni",
    "jni/sys",
    # Native libraries
    "native/*"
]

[workspace.package]
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
repository = "https://github.com/Serial-ATA/jvm"
edition = "2024"
license = "MIT OR APACHE-2.0"

[workspace.dependencies]
runtime = { path = "runtime" }
classfile = { path = "classfile" }
common = { path = "common" }
instructions = { path = "instructions" }
jimage = { path = "jimage" }
jni = { path = "jni" }
jni_sys = { path = "jni/sys" }
platform = { path = "platform" }
vm_symbols = { path = "generators/vm_symbols" }

# Native libraries
native-macros = { path = "native/macros" }

byteorder = "1.5.0"
byte-slice-cast = "1.2.2"
cfg-if = "1.0.0"
const_format = "0.2.33"
fxhash = "0.2.1"
libc = "0.2"
tracing = "0.1.41"
paste = "1.0.15"
zip = { version = "4.0.0", default-features = false }
build-deps = "0.1.4"

# Generators
combine = "4.6.7"
bitflags = "2.6.0"
indexmap = "2.7.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false }
walkdir = "2.5.0"

# Tools
clap = "4.0.29"
tracing-subscriber = "0.3.18"
