[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile = { path = "../classfile" }
common = { path = "../common" }
instructions = { path = "../instructions" }
jimage = { path = "../jimage" }
bytemuck = "1.13.0"
byte-slice-cast = { workspace = true }
jni = { path = "../jni" }
tracing = { workspace = true }
num_cpus = "1.15.0"
paste = { workspace = true }
platform = { path = "../platform" }
seq-macro = "0.3.5"
symbols = { path = "../symbols" }
zip = { workspace = true }

[build-dependencies]
native_methods = { path = "../generators/native_methods" }

[lib]
name = "jvm_runtime"
crate-type = ["dylib"]
