[package]
name = "runtime"
version = "0.1.0"
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile.workspace = true
common.workspace = true
instructions.workspace = true
jimage.workspace = true
jni.workspace = true
vm_symbols.workspace = true
native-macros.workspace = true

bytemuck = "1.20.0"
byte-slice-cast.workspace = true
fxhash.workspace = true
tracing.workspace = true
libc.workspace = true
libffi = { workspace = true, optional = true }
num_cpus = "1.16.0"
paste = { workspace = true }
platform.workspace = true
zip.workspace = true
indexmap = "2.7.0"
bumpalo = "3.16.0"

[build-dependencies]
native_methods = { path = "../generators/native_methods" }
build-deps.workspace = true

[features]
default = ["libffi"]
libffi = ["dep:libffi"]

[lints]
workspace = true

[lib]
name = "jvm"
crate-type = ["rlib", "dylib"]

[profile.dev]
debuginfo = "full"
opt-level = 0
