[package]
name = "classfile-fuzz"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.classfile]
path = ".."

[[bin]]
name = "classfile"
path = "fuzz_targets/classfile.rs"
test = false
doc = false
bench = false
