[package]
name = "vm_symbols"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["clone-impls", "parsing", "extra-traits", "printing"] }
proc-macro2.workspace = true
quote.workspace = true