[package]
name = "native-macros"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "proc-macro", "printing", "clone-impls"] }
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true