[package]
name = "native-nio"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nio"
crate-type = ["rlib", "dylib"]

[dependencies]
jni.workspace = true
native-macros.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_family = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_Networking_WinSock"] }

[lints]
workspace = true