[package]
name = "jimage_bin"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
classfile = { path = "../../classfile" }
jimage = { path = "../../jimage" }

[lints]
workspace = true

[[bin]]
name = "jimage"
path = "src/main.rs"