[package]
name = "jmod_bin"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
jmod = { path = "../../jmod" }

[lints]
workspace = true

[[bin]]
name = "jmod"
path = "src/main.rs"
