[package]
name = "sj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
jni = { path = "../../jni" }
libloading.workspace = true
runtime = { path = "../../runtime" }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[[bin]]
name = "sj"
path = "src/main.rs"

[lib]
name = "sj_lib"
path = "src/lib.rs"