[package]
name = "sj"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { workspace = true }
runtime = { workspace = true }

const_format.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
clap = { workspace = true, features = ["derive", "env"] }

[[bin]]
name = "sj"
path = "src/main.rs"

[lib]
name = "sj_lib"
path = "src/lib.rs"